Edits at MMA add SMS

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -323,10 +323,44 @@
 <p class="itemTitle">Introduction</p>
 </li>
 <li>
-<p class="folderTitle">Safety Management Systems</p>
+<p class="folderTitle">Safety Management</p>
 </li>
 <hr class="afterTitle"/>
 <ul>
+<li>
+<p class="itemTextStart">Safety management is a systematic approach taken by regulatory bodies and companies to identify, assess, control, and mitigate risks in order to ensure the safety of personnel, assets, and the environment. It involves the development and implementation of policies, procedures, and practices aimed at preventing accidents, injuries, and damage.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Key components of safety management include risk assessment, safety planning, establishment of policies and procedures, training and education, reporting ...</p>
+</li>
+<li>
+<p class="folderTitle">ISM Code</p>
+<p class="itemText">The International Safety Management Code (ISM Code) is a set of guidelines and regulations developed by the International Maritime Organization (IMO) to ensure the safe operation of ships and the prevention of marine pollution. It was adopted in 1993 and became mandatory for all vessels engaged in international voyages in 1998.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The primary objective of the ISM Code is to establish a safety management system (SMS) on board ships and ashore, providing a framework for managing safety and minimizing...</p>
+</li>
+<hr class="afterText"/>
+<ul>
+<li>
+<p class="itemTitle">Ship Obligations</p>
+<p class="itemText">&lt;p&gt; &lt;ul&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Implement the Safety Management System (SMS): The ship is responsible for implementing and following the SMS as defined by the company. This includes adhering to the documented procedures and instructions outlined in the SMS.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Report Hazards and Non-conformities: The ship is obligated to report any hazards, accidents, or non-conformities that may affect the safety of the ship, its personnel, or the environment. This includes reporting incidents, near-misses, and deficiencies in the SMS.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">...</p>
+</li>
+<li>
+<p class="itemTitle">Company Obligations</p>
+<p class="itemText">&lt;ul&gt;<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Develop and Implement the SMS: The company is responsible for developing and implementing a documented Safety Management System (SMS) for each ship under its management. The SMS should encompass policies, procedures, and instructions that promote safe operations and environmental protection.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Appoint a Designated Person Ashore (DPA): The company must appoint a Designated Person Ashore (DPA) who serves as a liaison between the company and the ship. The DPA ensures that the SMS is effectively...</p>
+</li>
+<li>
+<p class="itemTitle">Crew Obligations</p>
+</li>
+<li>
+<p class="itemTitle">conclusion</p>
+<p class="itemText">By fulfilling these obligations, everyone works together to promote a culture of safety, prevent accidents, protect the environment, and continuously improve the safety standards in the maritime industry.</p>
+</li>
+</ul>
+<hr class="afterText"/>
+
 <li>
 <p class="itemTitle">Components of a Safety Management System</p>
 </li>
@@ -334,13 +368,13 @@
 <p class="itemTitle">Management and Safety of Marine Engineering Operations (Modern Marine Engineers Manual Ch. 13)</p>
 </li>
 <li>
-<p class="itemTitle">ISM Code</p>
-</li>
-<li>
 <p class="itemTitle">SOLAS</p>
 </li>
 <li>
 <p class="itemTitle">OSHA &amp;amp; 29CFR</p>
+</li>
+<li>
+<p class="itemTitle">Untitled Document</p>
 </li>
 </ul>
 <hr class="afterTitle"/>
