--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -151,7 +151,9 @@
 <p class="itemTitle">introduction</p>
 <p class="itemText">Mechanical hazards are a physical hazards associated with machines and other movable objects that may cause harm to a person.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Injuries caused by mechanical hazards include friction or abrasion, lacerations, cutting, severing, pinching, crushing, or entanglement of body parts. Additionally, non-mechanical hazards such as chips, splashes, and sparks can injure you or others in the area.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Mechanical hazards can be managed by adopting safe work procedures and the application of appropriate safeguards...</p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="machine-safety"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Rotating Shaft Hazard Sign&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%" source="pics/s...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -177,17 +179,8 @@
 <ul>
 <li>
 <p class="itemTitle">Electrical Shock</p>
-<p class="itemText">The most immediate and dangerous hazard of electricity is electrical shock. When a person comes into contact with an electrical current, it can pass through their body, causing electrical shock. Even low-voltage shocks can lead to muscle contractions, burns, and disruption of the body's electrical signals. High-voltage shocks can result in severe burns, organ damage, and cardiac arrest.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"></p>
-</li>
-<li>
-<p class="itemTitle">Electrical Fires</p>
-<p class="itemText">Electrical malfunctions can generate heat and sparks, leading to electrical fires. Faulty wiring, overloaded circuits, damaged electrical cords, and short circuits are common causes of electrical fires. These fires can quickly spread and pose a significant risk to property and life. The combination of electricity and flammable materials increases the likelihood of a fire and makes it more challenging to extinguish.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"></p>
-</li>
-<li>
-<p class="itemTitle">Arc Flash and Arc Blast</p>
-<p class="itemText">Arc flash refers to the release of intense heat, light, and energy that occurs during an electrical fault or short circuit. It is characterized by a sudden and violent discharge of electrical energy through the air. The arc flash generates extremely high temperatures, often exceeding 35,000 degrees Fahrenheit (19,400 degrees Celsius). The intense heat emitted during an arc flash can cause severe burns to anyone in its vicinity. Additionally, the arc flash produces a bright flash of light, which ...</p>
+<p class="itemText">The most immediate and dangerous hazard of electricity is electrical shock. When a person comes into contact with an electrical voltage, current can pass through their body, causing electrical shock.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Roughly speaking, the greater the current, the more severe the shock.<span class="Apple-converted-space">  </span>High voltage presents more danger than lower voltages, but even normal household voltage (120 V AC) can cause severe shock or even death.</p>
 </li>
 <li>
 <p class="itemTitle">Electrical Burns</p>
@@ -198,13 +191,22 @@
 <p class="itemTitle">Electrocution</p>
 <p class="itemText">In the most severe cases, electric shocks can lead to electrocution, resulting in death. High-voltage shocks can cause cardiac arrest, severe internal injuries, and other life-threatening conditions. Contact with overhead power lines, unauthorized access to electrical panels or equipment, and improper handling of live wires are some situations that can lead to fatal accidents.</p>
 </li>
+<li>
+<p class="itemTitle">Electrical Fires</p>
+<p class="itemText">Electrical malfunctions can generate heat and sparks, leading to electrical fires. Faulty wiring, overloaded circuits, damaged electrical cords, and short circuits are common causes of electrical fires. These fires can quickly spread and pose a significant risk to property and life. The combination of electricity and flammable materials increases the likelihood of a fire and makes it more challenging to extinguish.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="itemTitle">Arc Flash and Arc Blast</p>
+<p class="itemText">Arc flash refers to the release of intense heat, light, and energy that occurs during an electrical fault or short circuit. It is characterized by a sudden and violent discharge of electrical energy through the air. The arc flash generates extremely high temperatures, often exceeding 35,000 degrees Fahrenheit (19,400 degrees Celsius). The intense heat emitted during an arc flash can cause severe burns to anyone in its vicinity. Additionally, the arc flash produces a bright flash of light, which ...</p>
+</li>
 </ul>
 <hr class="afterText"/>
 
 <li>
 <p class="itemTitle">Effects of Electrical Current on the Human Body</p>
-<p class="itemText">The severity of an electrical shock depends on the current’s magnitude, the duration, the contact area, and the path taken by the current through the body.<span class="Apple-converted-space">  </span>In extreme cases the shock causes failure of the normal action of the heart and lungs resulting in unconsciousness or death.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The shock current received obeys Ohm’s, so high voltages are always more dangerous.<span class="Apple-converted-space">  </span>But your body resistance is equally important.<span class="Apple-converted-space">  </span>Body resistance with dry skin may be above 100,000 ohms, However, if the skin is wet ...</p>
+<p class="itemText">Electrical shock occurs when current passes through the body.<span class="Apple-converted-space">  </span>The severity of the shock depends on the current’s magnitude, the duration, the contact area, and the path taken by the current through the body.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The shock current received obeys &lt;xref provisional="ohms-law"&gt;Ohm’s law&lt;/xref&gt;, so high voltages are always more dangerous.<span class="Apple-converted-space">  </span>But your body resistance is equally important.<span class="Apple-converted-space">  </span>Body resistance with dry skin may be above 100,000 ohms, However, if the skin is wet or broken, the body's resistance...</p>
 </li>
 </ul>
 <hr class="afterText"/>
