Edits Electric Propulsion

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -747,11 +747,16 @@
 <p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
 </ul>
-</ul>
 <hr class="afterText"/>
 
 <li>
-<p class="topLevelItemTitle">Principles of Thermodynamics</p>
+<p class="itemTitle">Untitled Document</p>
+</li>
+</ul>
+<hr class="afterTitle"/>
+
+<li>
+<p class="topLevelItemTitle">Principles of Thermodynamics - Susie</p>
 </li>
 <hr class="afterTitle"/>
 <ul>
@@ -988,6 +993,11 @@
 <p class="itemText">An electrical circuit is a complete loop or path that allows for the regulated flow of electric current to power devices and carry out different tasks. It consists of different elements like voltage sources, switches, and electrical loads that are interconnected through wires. Electrical loads refer to devices that consume electrical energy and convert it into another form like mechanical work, light, or heat. <span class="Apple-converted-space">  </span>Motors, light bulbs and heating elements are some common examples of electrical load...</p>
 </li>
 <li>
+<p class="itemTitle">AC vs. DC</p>
+<p class="itemText">single phase, three phase</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">batteries and solar cells</p>
+</li>
+<li>
 <p class="folderTitle">Electrical Power</p>
 </li>
 <hr class="afterTitle"/>
@@ -1019,6 +1029,29 @@
 <li>
 <p class="folderTitle">Transisters</p>
 </li>
+<li>
+<p class="folderTitle">Electrical Distribution</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="itemTitle">Circuit breakers</p>
+</li>
+<li>
+<p class="itemTitle">Safety Devices</p>
+</li>
+<li>
+<p class="itemTitle">Overcurrent Protection</p>
+</li>
+<li>
+<p class="itemTitle">Switchgear</p>
+</li>
+<li>
+<p class="itemTitle">Energy Management System</p>
+</li>
+</ul>
+<hr class="afterTitle"/>
+
 <li>
 <p class="folderTitle">Electrical Safety</p>
 </li>
@@ -1087,7 +1120,7 @@
 <hr class="afterTitle"/>
 
 <li>
-<p class="topLevelItemTitle">Diesel Power</p>
+<p class="topLevelItemTitle">Diesel Power - Will</p>
 </li>
 <hr class="afterTitle"/>
 <ul>
@@ -1107,54 +1140,120 @@
 <hr class="afterTitle"/>
 
 <li>
-<p class="topLevelItemTitle">Electrical Power</p>
+<p class="topLevelItemTitle">Electrical Propulsion</p>
 </li>
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="folderTitle">Propulsion System</p>
+<p class="folderTitle">introduction</p>
+<p class="itemText">Marine electric propulsion systems utilize generators to provide power for electric motors, which in turn drive the ship's propeller. The electric generators may be driven by any suitable prime mover, most commonly, diesel engines. While it may initially seem counterintuitive to interpose complex and costly equipment between the prime mover and the propeller when a simple line shaft and gearbox could transmit the power instead, there are valid justifications for the added complexity and expense....</p>
 </li>
-<hr class="afterTitle"/>
+<hr class="afterText"/>
 <ul>
 <li>
-<p class="itemTitle">Motors</p>
+<p class="itemTitle">Layout Flexibility</p>
+<p class="itemText">One notable advantage of electric propulsion is the ability to install the prime mover in any convenient location, without being restricted to a direct line with the propeller. Power is transmitted through flexible cable runs, as opposed to rigid line shafts. Furthermore, instead of relying on a single large main engine, multiple smaller engines can be used, allowing for placement in smaller spaces and more convenient locations. </p>
 </li>
 <li>
-<p class="itemTitle">Generators</p>
+<p class="itemTitle">Efficient operation</p>
+<p class="itemText">Electric propulsion systems enable both the prime mover and the propeller to operate at their optimal speeds, eliminating the need for reduction gears. Typically, medium speed diesel engines are coupled with low-speed motors and propellers. The speed reduction is accomplished by selecting the appropriate number of motor poles, and the shaft speed (RPM) is established by adjusting the electrical frequency to the motor. This setup allows each component to operate within its most efficient range, m...</p>
 </li>
 <li>
-<p class="itemTitle">Variable Frequency Drives</p>
+<p class="itemTitle">Economical Part-Load Operation</p>
+<p class="itemText">By employing multiple generators operating in parallel, ships can secure one or more engines under reduced load conditions. The remaining engines can then operate at nearly full load, resulting in improved efficiency compared to having more engines operating at part-load. Load management systems continuously monitor the electrical demand and promptly initiate the startup of an additional generator when necessary.</p>
+</li>
+<li>
+<p class="itemTitle">Redundancy and Reliability</p>
+<p class="itemText"> Electric propulsion systems provide inherent redundancy and enhanced reliability compared to traditional propulsion systems. With multiple smaller generator sets, the system can continue to function even if one or more generators or motors fail or require maintenance. This redundancy<span class="Apple-converted-space">  </span>reduces the risk of complete propulsion failure and ensures that the propulsion system remains operational. </p>
 </li>
 </ul>
-<hr class="afterTitle"/>
+<hr class="afterText"/>
 
 <li>
-<p class="folderTitle">Electrical Distribution</p>
+<p class="folderTitle">One Line Diagram</p>
+<p class="itemText">An overview of the electric propulsion system of the Patriot State II is shown below in &lt;xref ref="propulsion_system"/&gt;.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Electrical power for both propulsion and ship’s services is produced by four Hyundai HSJ9 913-08P diesel driven generators.<span class="Apple-converted-space">    </span>These are 6600 Volt, three-phase AC synchronous generators capable of producing up to 4053 kW at 80% power factor, or 5066.25 kVA.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Generators 1 and 2 are located in engineroom 1 and directly supply main switchboard No.1 , and generators 3 and 4 are lo...</p>
+</li>
+<li>
+<p class="folderTitle">Generators</p>
 </li>
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTitle">Transformers</p>
+<p class="folderTitle">Principle of operation</p>
+<p class="itemText">An electrical generator converts mechanical energy into electrical energy by utilizing the principle of electromagnetic induction. <span class="Apple-converted-space">  </span>Electromagnetic induction was first discovered in the early 19th century by English scientist Michael Faraday (1791 &lt;ndash/&gt; 1867) . According to Faraday's law of electromagnetic induction, a changing magnetic field induces an electric voltage in a nearby conductor. If the conductor forms a closed loop, an electric current will flow through it.</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A generator consist...</p>
 </li>
 <li>
-<p class="itemTitle">Circuit breakers</p>
+<p class="folderTitle">Construction</p>
+<p class="itemText">Specs:</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The principle components<span class="Apple-converted-space">  </span>of the Hyundai HSJ9 generator are shown in &lt;xref ref="generator"/&gt; and<span class="Apple-converted-space">  </span>in exploded view &lt;xref ref="generator_exploded"/&gt;. <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="generator"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;!-- Source:<span class="Apple-converted-space">  </span>P1206 EMPIRE STATE MACHINERY MANUAL<span class="Apple-converted-space">  </span>FIRST DRAFT MAY 2022 <span class="Apple-converted-space">  </span>--&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;<span class="Apple-converted-space">  </span>generator.svg<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/electric-propulsion/generator"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;p&gt;The main components include: &lt;ol cols="2"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;li&gt;Water cooled Air Cooler&lt;/li&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;li&gt;Ventilatio...</p>
 </li>
 <li>
-<p class="itemTitle">Safety Devices</p>
-</li>
-<li>
-<p class="itemTitle">Overcurrent Protection</p>
-</li>
-<li>
-<p class="itemTitle">Switchgear</p>
-</li>
-<li>
-<p class="itemTitle">One Line Diagram</p>
-</li>
-<li>
-<p class="itemTitle">Energy Management System</p>
+<p class="folderTitle">Excitation</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="exciter_exploded"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;!-- Source:<span class="Apple-converted-space">  </span>P1206 EMPIRE STATE MACHINERY MANUAL<span class="Apple-converted-space">  </span>FIRST DRAFT MAY 2022<span class="Apple-converted-space">  </span>--&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Exciter Exploded View &lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/electric-propulsion/exciter_exploded.png"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>&lt;sidebyside width="48%" xml:id='pilot_generator'&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;figure xml:id="exciter_rotor"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;!-- DV951E001_MAIN ALTERNATOR_OPERATION MANUAL_PMG<span class="Apple-converted-space">  </span>--&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;caption&gt; Exciter Rotor showing Permanent Magnets&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;image width="100%...</p>
 </li>
 </ul>
+<hr class="afterText"/>
+
+<li>
+<p class="folderTitle">Propulsion Frequency Converters</p>
+<p class="itemText">principle of operation</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">power electronics</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">pulse width modulation</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="propulsion_converter_schematic"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;!-- Source:<span class="Apple-converted-space">  </span>P1206 EMPIRE STATE MACHINERY MANUAL<span class="Apple-converted-space">  </span>FIRST DRAFT MAY 2022 --&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Propulsion Frequency Converter Schematic &lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/electric-propulsion/propulsion_converter_schematic"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="propulsion_converter"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;!-- Source:<span class="Apple-converted-space">  </span>P1206 EMPIRE STATE MACHINERY MANUAL<span class="Apple-converted-space">  </span>FIRST DRAFT MAY 2022 --&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Propulsion Frequency Conv...</p>
+</li>
+<li>
+<p class="folderTitle">Propulsion Motors</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="propulsion_motor"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;!-- Source:<span class="Apple-converted-space">  </span>DV951E001_MAIN ALTERNATOR_OPERATION MANUAL_ALTERNATOR--&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Propulsion Motor &lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/electric-propulsion/propulsion_motor"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="DriveTrain"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;!-- Source:<span class="Apple-converted-space">  </span>P1206 EMPIRE STATE MACHINERY MANUAL<span class="Apple-converted-space">  </span>FIRST DRAFT MAY 2022<span class="Apple-converted-space">  </span>--&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Drive Train<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/electric-propulsion/DriveTrain"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="folderTitle">Transformers</p>
+</li>
 </ul>
 <hr class="afterTitle"/>
 
