--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -151,9 +151,7 @@
 <p class="itemTitle">introduction</p>
 <p class="itemText">Mechanical hazards are a physical hazards associated with machines and other movable objects that may cause harm to a person.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Injuries caused by mechanical hazards include friction or abrasion, lacerations, cutting, severing, pinching, crushing, or entanglement of body parts. Additionally, non-mechanical hazards such as chips, splashes, and sparks can injure you or others in the area.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="machine-safety"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Rotating Shaft Hazard Sign&lt;/caption&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%" source="pics/s...</p>
+<p class="itemText"><p class="p1"><span class="s1">Mechanical hazards can be managed by adopting safe work procedures and the application of appropriate safeguards...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -179,17 +177,8 @@
 <ul>
 <li>
 <p class="itemTitle">Electrical Shock</p>
-<p class="itemText">The most immediate and dangerous hazard of electricity is electrical shock. When a person comes into contact with an electrical voltage, current can pass through their body, causing electrical shock.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Roughly speaking, the greater the current, the more severe the shock.<span class="Apple-converted-space">  </span>High voltage presents more danger than lower voltages, but even normal household voltage (120 V AC) can cause severe shock or even death.</p>
-</li>
-<li>
-<p class="itemTitle">Electrical Burns</p>
-<p class="itemText">Electrical burns occur when electric current passes through the body, generating heat. These burns can be internal or external, depending on the path the electricity takes. Electrical burns can cause extensive tissue damage and may require specialized medical treatment. The severity of electrical burns depends on the voltage, current, duration of contact, and the body's resistance.</span></p></p>
+<p class="itemText">The most immediate and dangerous hazard of electricity is electrical shock. When a person comes into contact with an electrical current, it can pass through their body, causing electrical shock. Even low-voltage shocks can lead to muscle contractions, burns, and disruption of the body's electrical signals. High-voltage shocks can result in severe burns, organ damage, and cardiac arrest.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"></p>
-</li>
-<li>
-<p class="itemTitle">Electrocution</p>
-<p class="itemText">In the most severe cases, electric shocks can lead to electrocution, resulting in death. High-voltage shocks can cause cardiac arrest, severe internal injuries, and other life-threatening conditions. Contact with overhead power lines, unauthorized access to electrical panels or equipment, and improper handling of live wires are some situations that can lead to fatal accidents.</p>
 </li>
 <li>
 <p class="itemTitle">Electrical Fires</p>
@@ -200,13 +189,22 @@
 <p class="itemTitle">Arc Flash and Arc Blast</p>
 <p class="itemText">Arc flash refers to the release of intense heat, light, and energy that occurs during an electrical fault or short circuit. It is characterized by a sudden and violent discharge of electrical energy through the air. The arc flash generates extremely high temperatures, often exceeding 35,000 degrees Fahrenheit (19,400 degrees Celsius). The intense heat emitted during an arc flash can cause severe burns to anyone in its vicinity. Additionally, the arc flash produces a bright flash of light, which ...</p>
 </li>
+<li>
+<p class="itemTitle">Electrical Burns</p>
+<p class="itemText">Electrical burns occur when electric current passes through the body, generating heat. These burns can be internal or external, depending on the path the electricity takes. Electrical burns can cause extensive tissue damage and may require specialized medical treatment. The severity of electrical burns depends on the voltage, current, duration of contact, and the body's resistance.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="itemTitle">Electrocution</p>
+<p class="itemText">In the most severe cases, electric shocks can lead to electrocution, resulting in death. High-voltage shocks can cause cardiac arrest, severe internal injuries, and other life-threatening conditions. Contact with overhead power lines, unauthorized access to electrical panels or equipment, and improper handling of live wires are some situations that can lead to fatal accidents.</p>
+</li>
 </ul>
 <hr class="afterText"/>
 
 <li>
 <p class="itemTitle">Effects of Electrical Current on the Human Body</p>
-<p class="itemText">Electrical shock occurs when current passes through the body.<span class="Apple-converted-space">  </span>The severity of the shock depends on the current’s magnitude, the duration, the contact area, and the path taken by the current through the body.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The shock current received obeys &lt;xref provisional="ohms-law"&gt;Ohm’s law&lt;/xref&gt;, so high voltages are always more dangerous.<span class="Apple-converted-space">  </span>But your body resistance is equally important.<span class="Apple-converted-space">  </span>Body resistance with dry skin may be above 100,000 ohms, However, if the skin is wet or broken, the body's resistance...</p>
+<p class="itemText">The severity of an electrical shock depends on the current’s magnitude, the duration, the contact area, and the path taken by the current through the body.<span class="Apple-converted-space">  </span>In extreme cases the shock causes failure of the normal action of the heart and lungs resulting in unconsciousness or death.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The shock current received obeys Ohm’s, so high voltages are always more dangerous.<span class="Apple-converted-space">  </span>But your body resistance is equally important.<span class="Apple-converted-space">  </span>Body resistance with dry skin may be above 100,000 ohms, However, if the skin is wet ...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -1170,10 +1168,17 @@
 <hr class="afterText"/>
 
 <li>
-<p class="folderTitle">One Line Diagram</p>
-<p class="itemText">An overview of the electric propulsion system of the Patriot State II is shown below in &lt;xref ref="propulsion_system"/&gt;.</span></p></p>
+<p class="folderTitle">Style Guide</p>
+<p class="itemText">&lt;blockquote&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Omit needless words.<span class="Apple-converted-space">  </span>Vigorous writing is concise.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A sentence should contain no unnecessary words, a paragraph no unnecessary sentences, for the same reason that a drawing should have no unnecessary lines and a machine no unnecessary parts. This requires not that the writer make all his sentences short, or that he avoid all detail and treat his subjects only in outline, but that every word tell.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;attribution&gt;Strunk and White, &lt;pubtitle&gt;The Elements of Style&lt;/pubtitle&gt;&lt;/attribution&gt;...</p>
+</li>
+<li>
+<p class="folderTitle">Overview</p>
+<p class="itemText">An overview of the electric propulsion system of the Patriot State II is shown in the one-line diagram below, &lt;xref ref="propulsion_system"/&gt;.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Electrical power for both propulsion and ship’s services is produced by four Hyundai HSJ9 913-08P diesel driven generators.<span class="Apple-converted-space">    </span>These are 6600 Volt, three-phase AC synchronous generators capable of producing up to 4053 kW at 80% power factor, or 5066.25 kVA.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Generators 1 and 2 are located in engineroom 1 and directly supply main switchboard No.1 , and generators 3 and 4 are lo...</p>
+<p class="itemText"><p class="p1"><span class="s1">Generators 1 and 2 are located in engineroom 1 and directly supply main switchboard No.1 , and gen...</p>
 </li>
 <li>
 <p class="folderTitle">Generators</p>
@@ -1181,25 +1186,23 @@
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="folderTitle">Principle of operation</p>
-<p class="itemText">An electrical generator converts mechanical energy into electrical energy by utilizing the principle of electromagnetic induction. <span class="Apple-converted-space">  </span>Electromagnetic induction was first discovered in the early 19th century by English scientist Michael Faraday (1791 &lt;ndash/&gt; 1867) . According to Faraday's law of electromagnetic induction, a changing magnetic field induces an electric voltage in a nearby conductor. If the conductor forms a closed loop, an electric current will flow through it.</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A generator consist...</p>
+<p class="folderTitle">Principle of Operation</p>
+<p class="itemText">An electrical generator converts mechanical energy into electrical energy by utilizing the principle of electromagnetic induction. <span class="Apple-converted-space">  </span>Electromagnetic induction was first discovered in the early 19th century by English scientist Michael Faraday (1791 &lt;ndash/&gt; 1867). According to Faraday's law of electromagnetic induction, a moving or changing magnetic field induces an electric voltage in a nearby conductor. If the conductor forms a closed loop, an electric current will flow and electrical power wi...</p>
 </li>
 <li>
 <p class="folderTitle">Construction</p>
-<p class="itemText">Specs:</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The principle components<span class="Apple-converted-space">  </span>of the Hyundai HSJ9 generator are shown in &lt;xref ref="generator"/&gt; and<span class="Apple-converted-space">  </span>in exploded view &lt;xref ref="generator_exploded"/&gt;. <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="generator"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;!-- Source:<span class="Apple-converted-space">  </span>P1206 EMPIRE STATE MACHINERY MANUAL<span class="Apple-converted-space">  </span>FIRST DRAFT MAY 2022 <span class="Apple-converted-space">  </span>--&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;<span class="Apple-converted-space">  </span>generator.svg<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/electric-propulsion/generator"/&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;p&gt;The main components include: &lt;ol cols="2"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;li&gt;Water cooled Air Cooler&lt;/li&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;li&gt;Ventilatio...</p>
+<p class="itemText">The specifications of the the Hyundai HSJ9 used on the training ship are shown in &lt;xref ref="generator_specs"/&gt;.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;table xml:id="generator_specs" &gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;title&gt;Main Generator Specifications&lt;/title&gt;&lt;tabular&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space">            </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;cell&gt;Manufacturer&lt;/cell&gt;&lt;cell&gt;Hyundai&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;/row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;cell&gt;Model&lt;/cell&gt;&lt;cell&gt;HSJ9 913-08P &lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;/row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;cell&gt;Type&lt;/cell&gt;&lt;cell&gt;8 pole, cylindrical rotor, b...</p>
 </li>
 <li>
 <p class="folderTitle">Excitation</p>
@@ -1216,11 +1219,17 @@
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;caption&gt; Exciter Rotor showing Permanent Magnets&lt;/caption&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;image width="100%...</p>
 </li>
+<li>
+<p class="folderTitle">Voltage Regulation</p>
+</li>
 </ul>
-<hr class="afterText"/>
+<hr class="afterTitle"/>
 
 <li>
-<p class="folderTitle">Propulsion Frequency Converters</p>
+<p class="folderTitle">Transformers</p>
+</li>
+<li>
+<p class="folderTitle">Propulsion Converters</p>
 <p class="itemText">principle of operation</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">power electronics</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">pulse width modulation</span></p></p>
@@ -1251,11 +1260,8 @@
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
-<li>
-<p class="folderTitle">Transformers</p>
-</li>
 </ul>
-<hr class="afterTitle"/>
+<hr class="afterText"/>
 
 <li>
 <p class="topLevelItemTitle">Auxiliary Systems</p>
