Add custom xsl to pop out landscape figures

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2899,17 +2899,22 @@
 </li>
 <li>
 <p class="itemTitle">System diagrams</p>
-<p class="itemText">&lt;figure xml:id="fig_waterline_profile" landscape="yes"&gt;</span></p></p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_waterline_profile" landscape="yes"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; &lt;em&gt;Patriot State&lt;/em&gt;<span class="Apple-converted-space">  </span>Waterline Profile<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;url href="/IME/external/pics/TSPS/waterline_profile.pdf"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/TSPS/waterline_profile"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[<span class="Apple-converted-space">  </span>MARAD<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;&lt;/url&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_outboard_profile" landscape="yes"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; &lt;em&gt;Patriot State&lt;/em&gt;<span class="Apple-converted-space">  </span>Outboard Profile<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;url href="/IME/external/pics/TSPS/outboard_profile.pdf"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" sour...</p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/TSPS/outboard_profile"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[<span class="Apple-converted-space">  </span>MARAD<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_inboard_po...</p>
 </li>
 </ul>
 </ul>
