Work on pipe unions

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2154,9 +2154,9 @@
 <p class="itemText"><p class="p1"><span class="s1">Standards were first developed about 200 years ago to define the shape and tolerances of...</p>
 </li>
 <li>
-<p class="folderTitle">Soldered or Brazed Connections</p>
-<p class="itemText">Soldering and Brazing are both processes in which two parts are joined together using a molten filler metal.<span class="Apple-converted-space">  </span>After the filler material solidifies, the a strong bond if formed. The difference between soldering and brazing has to do with the filler material, particularly its melting temperature. <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Solder is an alloy that melts at 840 F or less.<span class="Apple-converted-space">  </span>Solder is composed primarily of tin, mixed with other metals such as nickel for added strength. Solder used to be a tin/lead mixture, but that is no long...</p>
+<p class="folderTitle">Soldered and Brazed Connections</p>
+<p class="itemText">Soldering and Brazing are both processes in which two parts are joined together using a molten filler metal.<span class="Apple-converted-space">  </span>After the filler material solidifies, a strong bond if formed. The difference between soldering and brazing has to do with the filler material, particularly its melting temperature. <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Solder is an alloy that melts at 840 F or less.<span class="Apple-converted-space">  </span>Solder is composed primarily of tin, mixed with other metals such as nickel for added strength. Solder used to be a tin/lead mixture, but that is no longer u...</p>
 </li>
 <li>
 <p class="folderTitle">Compression Fittings</p>
@@ -2180,178 +2180,50 @@
 <hr class="afterText"/>
 
 <li>
-<p class="folderTitle">NPT Pipe Fittings</p>
-<p class="itemText">&lt;figure xml:id="fig_pipe_fittings"&gt;</span></p></p>
+<p class="folderTitle">Threaded Pipe Fittings</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="itemTextStart">&lt;figure xml:id="fig_pipe_fittings"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Pipe Fittings &lt;/caption&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/piping_systems/pipe_fittings.png"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ mostly from www.jmesales.com<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Pipe fittings play a crucial role in connecting, directing, and controlling the flow of fluids within a piping system. They come in various shapes, sizes, and configurations to accommodate different needs. Here's a list of common pipe fittings organized by categories:</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="folderTitle">Pipe Thread</p>
-<p class="itemText">Pipe thread standards are standardized specifications that define the characteristics of threaded connections used in pipes and pipe fittings. These standards ensure compatibility and interchangeability between different components in piping systems. There are several pipe thread standards used around the world, each with its own characteristics and applications. Here are some of the most common pipe thread standards:</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">1. **NPT (National Pipe Thread):**</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>- NPT is a widely used thread standard...</p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
 <li>
-<p class="folderTitle">Nipples</p>
-</li>
-<hr class="afterTitle"/>
-<ul>
-<li>
-<p class="itemTextStart">Pip's Island Home » How to Measure Pipe Nipple Length? (5 Types)</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">How To Measure Pipe Nipple Length? (5 Types)</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">by Pip's Island Home</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">#</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Are you doing a DIY plumbing project and wondering how pipe nipples are measured? Or perhaps you are a plumbing rookie curious how to measure pipe nipples?</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Ordering the right size nipple is important in any successful plumbing installation. This small but crucial pipe fittings make all the difference in guaranteeing leakage-free low-pressure piping systems.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">So, jus...</p>
+<p class="itemTitle">Pipe Nipples</p>
+<p class="itemText">Pipe nipples are short sections of pipe with male threads on both ends. The are used to connect two female threaded pipe fittings.. <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Close nipples (a) are the shortest practical pipe nipple. The are used to connect two fittings very close to one another, leaving no unthreaded pipe exposed. Close or nipples are difficult to work with because the threads will be damaged with a pipe wrench, and the are difficult to remove without damage.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Short or shoulder nipples (b) are longer than close nipples ...</p>
 </li>
 <li>
-<p class="itemTitle">Types of Nipple</p>
-<p class="itemText">A nipple is basically a pipe with male threads on each side to facilitate joining two pipes or fittings with similar female threads.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">It is made by cutting threads on both sides of a pipe by die or a suitable process. The nipples may be short or long.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">* Hexagonal Reducer Nipple</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A hexagonal reducer nipple is a hexagonal shaped nipple with two different sizes of threads on each side.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The purpose of the hexagonal reducer nipple is to connect the pipes of two different sizes together</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">* Hexagonal Nipp...</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="folderTitle">Elbow Fittings</p>
-<p class="itemText">90° Elbow</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">45° Elbow</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Long Radius Elbow</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Short Radius Elbow</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">Types of Elbow</p>
-<p class="itemText">Without elbows, it is impossible to think of a piping system on ship, especially in a limited place of installation. Elbows give flexibility for directing and building the piping system leading to saving of space and material.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Different types of elbows are used in the piping system of ships as per the space and design of installation.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>* Male Elbow</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A male elbow is a fitting with male threads on both sides and is used for changing the direction of the piping. They fix on to female threads of the ...</p>
+<p class="itemTitle">Unions and Couplings</p>
+<p class="itemText">Couplings and unions are both pipe fittings used to join two pipes or nipples, but they are used in different situations. A coupling is used to make a permanent connection, while a union is used when the connection that can be separated for maintenance from time to time.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A coupling is a simple, short section of pipe with internal female threads.<span class="Apple-converted-space">  </span>Two sections of pipe are tightened into the coupling to make the connection.<span class="Apple-converted-space">  </span>In order to disassemble the connection, one of the pipes needs to be rota...</p>
 </li>
 <li>
-<p class="itemTitle">Bends and elbows</p>
-<p class="itemText">Bends and elbows are important parts of any piping system as they allow the integration of flexibility of design by change in the flow direction of the media to be carried inside</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The details of these important components are discussed in this chapter</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>Bend or Elbow</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">There is always a doubt about the terms bends and elbows on ships.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">They are frequently used as synonyms. between them is as follows:</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The difference</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>* Bend is a generic term for any offset or change of direction in the piping. It is a...</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="folderTitle">Tee Fittings</p>
-<p class="itemText">Equal Tee</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Reducing Tee</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Barred Tee (Branching Tee)</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">Types of Tee</p>
-<p class="itemText">Pipe adapters are fittings that have to adapt to changes and are therefore used for joining different types of pipes such as a pipe to a hose. Adapters are used to extend or terminate the piping. They are also used to connect dissimilar pipes.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">There are male to female adapters, parallel to taper thread adapters, pipe to hose adapters etc. Pipe adapters have a male or female thread on one side and an opposite gender thread on the other side.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>* Male Tee</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>A male tee is a pipe fitting that joins tw...</p>
+<p class="itemTitle">Elbow Fittings</p>
+<p class="itemText">A pipe elbow is a fitting used to join two sections of straight pipes at an angle. <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Standard elbows are available in 90° (e) , 45° (f) and less commonly 22.5° (g) angles.<span class="Apple-converted-space">  </span>A 90° Ell is also called a quarter-bend.<span class="Apple-converted-space">   </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Standard elbows fit the same size pipe and female threads on both ends.<span class="Apple-converted-space">  </span>When one end is smaller than the other the fitting is called a reducing elbow (h), and when one end has male threads the fitting is called a street elbow (i).</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Short radius elbows have a radius of curvature of a...</p>
 </li>
 <li>
-<p class="folderTitle">Cross Fittings</p>
-<p class="itemText">Equal Cross</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Reducing Cross</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="folderTitle">Reducer Fittings</p>
-<p class="itemText">Concentric Reducer</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Eccentric Reducer</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">Types of Adapters</p>
-<p class="itemText">Pipe adapters are fittings that have to adapt to changes and are therefore used for joining different types of pipes such as a pipe to a hose. Adapters are used to extend or terminate the piping. They are also used to connect dissimilar pipes.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">There are male to female adapters, parallel to taper thread adapters, and pipe to hose adapters etc. Pipe adapters have a male or female thread on one side and an opposite gender thread on the other side.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">* Gauge Adapter</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A gauge adapter is used for fitting...</p>
+<p class="itemTitle">Tee Fittings</p>
+<p class="itemText">Tee fittings are used to connect three sections of pipe at right angles, and are often used to make a branch line.<span class="Apple-converted-space">  </span>Cross fittings are similar, but connect four pipe sections <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Standard Tees and Crosses use female threads and all connections are the same size, but unequal (reducing) and street (one male thread) varieties are sometimes available.</p>
 </li>
 <li>
-<p class="itemTitle">Miscellaneous Fittings</p>
-<p class="itemText">* Reducing Coupling</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A reducer coupling is a coupling with two different sizes of threads on each side.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">They can also be plain reducer coupling and hexagonal reducer coupling. They are used to connect two different sizes of pipes or fittings and sometimes also for flow control.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">* Reducing Bushing</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A reducing bushing is a pipe fitting with both male and female threads that joins two pipes of different diameters.</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="folderTitle">Coupling Fittings</p>
-<p class="itemText">Full Coupling</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Half Coupling</p>
+<p class="itemTitle">Caps and Plugs</p>
+<p class="itemText">Caps and plugs are pipe fittings used to seal the end of a section of pipe.<span class="Apple-converted-space">  </span>Caps are female threaded and plugs are male threaded.</p>
 </li>
 <li>
-<p class="folderTitle">Union Fittings</p>
-<p class="itemText">Union</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Threaded Union</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Socket Weld Union</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">UNIONS</p>
-<p class="itemText">Union fittings are provided in piping systems to allow the piping to be taken down for repairs and alterations. Unions are available in many different materials and designs to withstand a wide range of pressures and temperatures. Figure 14-1 shows some commonly used types of unions.</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="folderTitle">Cap Fittings</p>
-<p class="itemText">Cap</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Plug</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">caps and plugs</p>
-<p class="itemText">* Pipe Cap</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A pipe cap is a fitting that seals the end of the pipe. It is like a plug but it has female threads and screws on the male threads on the end of a pipe or adapter</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">* Pipe Plug</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A pipe plug is a fitting to close or seal the end of a pipe. A plug has male threads and screws on to the female threads on a fitting.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span></p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="folderTitle">Nipple Fittings</p>
-<p class="itemText">Close Nipple</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Short Nipple</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Long Nipple</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">https://www.titanfittings.com/Articles.asp?ID=419</p>
-</li>
-<li>
-<p class="folderTitle">EXPANSION JOINTS</p>
-<p class="itemText">Expansion joints are used in some piping systems to allow the piping to expand and contract with temperature changes, without damage to the piping. Two basic types of expansion joints are used in shipboard piping systems: sliding-type joints and flexing-type joints. Sliding-type expansion joints include sleeve joints, rotary joints, ball and socket joints, and joints made up of some combination of these types. The amount of axial and rotary motion that can be abosrbed by any particular type</p>
+<p class="itemTitle">Adapter fittings</p>
+<p class="itemText">Adapter fittings are used to connect components that have different sizes or thread forms together, for example: parallel to taper thread adapters, pipe to hose adapters</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Reducing adapters, as the name suggests are used to connect pipes of different sizes.<span class="Apple-converted-space">  </span>A straight reducer has female threads on both ends, while a straight reducing bushing has a large male thread and a smaller female thread.<span class="Apple-converted-space">  </span>Other reducing adapters including reducing elbow and tees are available with different combinations of ...</p>
 </li>
 </ul>
 </ul>
